@@ -22,6 +22,9 @@ no_index:
     - t
     - xt
 provides:
+  Dist::Zilla::Plugin::Author::SKIRMESS::InsertVersion:
+    file: lib/Dist/Zilla/Plugin/Author/SKIRMESS/InsertVersion.pm
+    version: '0.010'
   Dist::Zilla::Plugin::Author::SKIRMESS::RepositoryBase:
     file: lib/Dist/Zilla/Plugin/Author/SKIRMESS/RepositoryBase.pm
     version: '0.010'
@@ -183,6 +186,10 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Author::SKIRMESS::RepositoryBase
       name: '@Author::SKIRMESS/Author::SKIRMESS::RepositoryBase'
+      version: '0.010'
+    -
+      class: Dist::Zilla::Plugin::Author::SKIRMESS::InsertVersion
+      name: '@Author::SKIRMESS/Author::SKIRMESS::InsertVersion'
       version: '0.010'
     -
       class: Dist::Zilla::Plugin::NextRelease
